--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,16 @@
 <h1>Make your form here</h1>
+
+<form action="/pirates" method="POST">
+
+    Pirate Name: <input type="text" name= "pirate[name]" id = "pirate_name">
+    Pirate Weight: <input type="text" name= "pirate[weight]" id = "pirate_weight">
+    Pirate Height: <input type="text" name= "pirate[height]" id = "pirate_height">
+    Ship Name: <input type="text" name= "pirate[ships][][name]" id = "ship_name_1">
+    Ship Type: <input type="text" name= "pirate[ships][][type]" id = "ship_type_1">
+    Ship Booty: <input type="text" name= "pirate[ships][][booty]" id = "ship_booty_1">
+    Ship Name: <input type="text" name= "pirate[ships][][name]" id = "ship_name_2">
+    Ship Type: <input type="text" name= "pirate[ships][][type]" id = "ship_type_2">
+    Ship Booty: <input type="text" name= "pirate[ships][][booty]" id = "ship_booty_2">
+    <button type="submit">Submit</button>
+
+</form>
